tests/valid_programs/basics/hello_world.duck
fn main() {
    std::io::println("hello");
}
