tests/errors/typechecker/require_duck_give_duck_with_incompatible_field_type.duck
fn myfn(x: { abc: Int }) {}

fn main() {
    myfn({ abc: "H" });
}
